# calcit-fswatch

./: .gitignore  Cargo.toml  README.md  build.sh  calcit.cirru  compact.cirru
.github/workflows/: check.yaml
src/: lib.rs
